[UKTrains] Use mobile site and mobile user agent
*Change urls to mobile site
*Change parser functions
*Pass wp user agent to http requests
*Remove GZipWebClient because it did not support overriding the user agent correctly
*Update to latest FSharp.Data which supports compression in PCLs

--- a/Common/Common.fsproj
+++ b/Common/Common.fsproj
@@ -51,6 +51,7 @@
   <Import Project="$(FSharpTargetsPath)" />
   <ItemGroup>
     <None Include="packages.config" />
+    <Compile Include="Helpers.fs" />
     <Compile Include="HtmlAgilityPack.FSharp.fs" />
     <Compile Include="LazyAsync.fsi" />
     <Compile Include="LazyAsync.fs" />
