--- a/Trains/Trains.fsproj
+++ b/Trains/Trains.fsproj
@@ -54,6 +54,7 @@
     <Compile Include="GeoUtils.fs" />
     <EmbeddedResource Include="UKStations.csv" />
     <EmbeddedResource Include="UKDepartures.html" />
+    <None Include="UKLiveProgress.html" />
     <None Include="IrelandStations.fsx" />
     <EmbeddedResource Include="IrelandStations.csv" />
     <EmbeddedResource Include="IrelandStations.xml" />
@@ -74,10 +75,15 @@
       <Private>True</Private>
     </Reference>
     <Reference Include="FSharp.Data">
-      <HintPath>..\lib\portable\FSharp.Data.dll</HintPath>
+      <HintPath>..\packages\FSharp.Data.2.0.0-alpha\lib\portable-net40+sl5+wp8+win8\FSharp.Data.dll</HintPath>
+      <Private>True</Private>
     </Reference>
     <Reference Include="HtmlAgilityPack-PCL">
       <HintPath>..\packages\HtmlAgilityPack-PCL.1.4.6\lib\HtmlAgilityPack-PCL.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="Zlib.Portable">
+      <HintPath>..\packages\Zlib.Portable.1.9.2\lib\portable-net4+sl4+wp71+win8\Zlib.Portable.dll</HintPath>
       <Private>True</Private>
     </Reference>
   </ItemGroup>
