--- a/Common.WP8/Common.WP8.csproj
+++ b/Common.WP8/Common.WP8.csproj
@@ -87,6 +87,7 @@
       <DependentUpon>AboutPage.xaml</DependentUpon>
     </Compile>
     <Compile Include="AppMetadata.cs" />
+    <Compile Include="DynamicTextBlock.cs" />
     <Compile Include="Extensions.cs" />
     <Compile Include="ErrorReporting.cs" />
     <Compile Include="ImageCacheConverter.cs" />
