--- a/LearnOnTheGo/LearnOnTheGo.fsproj
+++ b/LearnOnTheGo/LearnOnTheGo.fsproj
@@ -59,6 +59,7 @@
     <Compile Include="Crawler.fs" />
     <Compile Include="SampleData.fs" />
     <None Include="Tests.fsx" />
+    <None Include="app.config" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="FSharp.Core">
@@ -66,7 +67,7 @@
       <Private>True</Private>
     </Reference>
     <Reference Include="FSharp.Data">
-      <HintPath>..\packages\FSharp.Data.2.0.0-alpha\lib\portable-net40+sl5+wp8+win8\FSharp.Data.dll</HintPath>
+      <HintPath>..\packages\FSharp.Data.2.0.0-rc-a1403090010\lib\portable-net40+sl5+wp8+win8\FSharp.Data.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="HtmlAgilityPack-PCL">
