--- a/Trains/Trains.fsproj
+++ b/Trains/Trains.fsproj
@@ -68,6 +68,7 @@
     <Compile Include="LiveDepartures.UK.fs" />
     <Compile Include="LiveDeparturesExtensions.fs" />
     <Compile Include="SampleData.fs" />
+    <None Include="app.config" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="FSharp.Core">
@@ -75,7 +76,7 @@
       <Private>True</Private>
     </Reference>
     <Reference Include="FSharp.Data">
-      <HintPath>..\packages\FSharp.Data.2.0.0-alpha\lib\portable-net40+sl5+wp8+win8\FSharp.Data.dll</HintPath>
+      <HintPath>..\packages\FSharp.Data.2.0.0-rc-a1403090010\lib\portable-net40+sl5+wp8+win8\FSharp.Data.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="HtmlAgilityPack-PCL">
