--- a/Trains/packages.config
+++ b/Trains/packages.config
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="FSharp.Data" version="2.0.0-alpha" targetFramework="portable-net45+sl50+win+MonoAndroid10+MonoTouch10" />
+  <package id="FSharp.Data" version="2.0.0-rc-a1403090010" targetFramework="portable-net45+sl50+win+MonoAndroid10+MonoTouch10" />
   <package id="HtmlAgilityPack-PCL" version="1.4.6" targetFramework="portable-win+net45+sl50" />
   <package id="Zlib.Portable" version="1.9.2" targetFramework="portable-net45+sl50+win+MonoAndroid10+MonoTouch10" />
 </packages>
