--- a/Trains.WP8/Trains.WP8.csproj
+++ b/Trains.WP8/Trains.WP8.csproj
@@ -97,6 +97,9 @@
     <Compile Include="SettingsPage.xaml.cs">
       <DependentUpon>SettingsPage.xaml</DependentUpon>
     </Compile>
+    <Compile Include="VoiceCommandsPage.xaml.cs">
+      <DependentUpon>VoiceCommandsPage.xaml</DependentUpon>
+    </Compile>
     <Compile Include="StationPage.xaml.cs">
       <DependentUpon>StationPage.xaml</DependentUpon>
     </Compile>
@@ -144,6 +147,10 @@
       <SubType>Designer</SubType>
     </Page>
     <Page Include="SettingsPage.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
+    <Page Include="VoiceCommandsPage.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
