--- a/Common/packages.config
+++ b/Common/packages.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="HtmlAgilityPack-PCL" version="1.4.6" targetFramework="portable-net45+sl50+win" />
+  <package id="FSharp.Data" version="2.1.0" targetFramework="portable-net45+sl50+win" />
+  <package id="Zlib.Portable" version="1.10.0" targetFramework="portable-net45+sl50+win" />
 </packages>
