--- a/Trains.WP8.IE/packages.config
+++ b/Trains.WP8.IE/packages.config
@@ -1,5 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Coding4Fun.Toolkit.Controls" version="2.0.7" targetFramework="wp80" />
+  <package id="FSharp.Data" version="2.1.0" targetFramework="wp80" />
   <package id="WPtoolkit" version="4.2013.08.16" targetFramework="wp80" />
+  <package id="Zlib.Portable" version="1.10.0" targetFramework="wp80" />
 </packages>
