--- a/Trains/packages.config
+++ b/Trains/packages.config
@@ -1,6 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="FSharp.Data" version="2.0.14" targetFramework="portable-net45+sl50+win+MonoAndroid10+MonoTouch10" />
-  <package id="HtmlAgilityPack-PCL" version="1.4.6" targetFramework="portable-win+net45+sl50" />
+  <package id="FSharp.Data" version="2.1.0" targetFramework="portable-net45+sl50+win" />
   <package id="Zlib.Portable" version="1.10.0" targetFramework="portable-net45+sl50+win+MonoAndroid10+MonoTouch10" />
 </packages>
