--- a/LearnOnTheGo/app.config
+++ b/LearnOnTheGo/app.config
@@ -6,6 +6,6 @@
         <assemblyIdentity name="FSharp.Core" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-2.3.5.1" newVersion="2.3.5.1" />
       </dependentAssembly>
-    </assemblyBinding>
+    <dependentAssembly><assemblyIdentity name="Coding4Fun.Toolkit.Controls" publicKeyToken="c5fd7b72b1a17ce4" culture="neutral" /><bindingRedirect oldVersion="0.0.0.0-2.0.7.0" newVersion="2.0.7.0" /></dependentAssembly><dependentAssembly><assemblyIdentity name="Microsoft.Phone.Controls.Toolkit" publicKeyToken="b772ad94eb9ca604" culture="neutral" /><bindingRedirect oldVersion="0.0.0.0-8.0.1.0" newVersion="8.0.1.0" /></dependentAssembly></assemblyBinding>
   </runtime>
 </configuration>
