--- a/Trains.WP8.UK/Trains.WP8.UK.csproj
+++ b/Trains.WP8.UK/Trains.WP8.UK.csproj
@@ -135,7 +135,9 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="SplashScreenImage.jpg" />
-    <Content Include="VoiceCommandDefinition_8.1.xml" />
+    <Content Include="VoiceCommandDefinition_8.1.xml">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Common.WP8\Common.WP8.csproj">
